feat: Elasticsearch dev config 변경 및 Artwork Tags null 체크